fix: Fix layout on small or mobile screens

--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body {
     color: #E5E5E5;
     font: 90% 'Lucida Grande', 'Lucida Sans Unicode', Verdana, Tahoma, Arial, sans-serif;
     line-height: 1.2em;
-    margin: 0 auto;
-    padding: 0;
+    margin: auto;
+    padding: 1.2em;
 }
 
 label {
@@ -98,18 +98,18 @@ h3 {
 
 #everything {
     color: #F4F4F4;
-    margin: 10px auto;
-    padding: 0;
-    width: 1000px;
+    padding: 1em;
+    width: 90%;
+    min-width: 20em
 }
 
 #header {
     margin: 0;
     max-width: 1000em;
     font-weight: bold;
-    font-size: 3em;
+    font-size: 1.5em;
     padding-left: 0;
-    margin: 0.7em;
+    margin: 0.5em
 }
 
 #header a {
@@ -134,7 +134,6 @@ h3 {
     margin: 0;
     padding: 0;
     text-align: left;
-    width: 750px;
 }
 
 #footer {
@@ -170,7 +169,7 @@ h3 {
     margin-bottom: 0px;
     text-align: right;
     font-size: 0.8em;
-    width: 490px;
+    width: 50%;
     color: #709E49;
 }
 
